211 config changes to accomodate JedisPoolConfig and SSL configuration